src/objects/Defect__c.object
<CustomObject>
    <description>TOOLKIT - This object represents a failure to meet a requirement.</description>
    <fields>
        <fullName>Analysis_and_Proposed_Solution__c</fullName>
        <description>Developer&apos;s comments on the defect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Analysis and Proposed Solution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>SAP CRM</fullName>
                </value>
                <value>
                    <fullName>CSP</fullName>
                </value>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>fALU SFDC</fullName>
                </value>
                <value>
                    <fullName>Pricetool</fullName>
                </value>
                <value>
                    <fullName>Surround</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Web Methods</fullName>
                </value>
                <value>
                    <fullName>Corporate Directory</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
                <value>
                    <fullName>SingleCMD</fullName>
                </value>
                <value>
                    <fullName>STARS</fullName>
                </value>
                <value>
                    <fullName>SF DOCS</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Outlook</fullName>
                </value>
                <value>
                    <fullName>NIMS</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Unknown/Other</fullName>
                </value>
                <value>
                    <fullName>Apttus OEP</fullName>
                </value>
                <value>
                    <fullName>Apttus CPQ</fullName>
                </value>
                <value>
                    <fullName>Apttus IWA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BA_Functional_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the primary Accenture resource for the team.</inlineHelpText>
        <label>BA/Functional Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related capability to the defect</description>
        <label>Feature</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Populated through a trigger with the date when the defect was closed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Component_Detail__c</fullName>
        <description>Type of the Component in which the defect is identified</description>
        <label>Component Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Buttons or Links</fullName>
                </value>
                <value>
                    <fullName>Custom Functionality / Code</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>ETL</fullName>
                </value>
                <value>
                    <fullName>Fields</fullName>
                </value>
                <value>
                    <fullName>List Views</fullName>
                </value>
                <value>
                    <fullName>Page Layouts</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Security / Permissions</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Workflow &amp; Approvals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Object/Functional Area where the defect is identified</description>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Report / Dashboard</fullName>
                </value>
                <value>
                    <fullName>Role Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
                <value>
                    <fullName>Accreditation</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Click-to-Accept form</fullName>
                </value>
                <value>
                    <fullName>Articles / Content</fullName>
                </value>
                <value>
                    <fullName>Courses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Pick list value for Country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_by_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>Created by Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <formula>TEXT (Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_left__c</fullName>
        <formula>if (OR(Current_Status__c =&quot;Developer Assigned&quot;,Current_Status__c=&quot;Fixed&quot;, Current_Status__c =&quot;Fix in Process&quot;),if(Text(Target_Completion_Date__c - TODAY())&lt;&gt;&quot;&quot;,Text(Target_Completion_Date__c - TODAY()) &amp; &quot; Day(s) Left&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Age__c</fullName>
        <formula>IF(UPPER(MID( Current_Status__c , 1, 6))=&quot;CLOSED&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/365) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/365))&amp; &quot; Y+&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/30) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/30))&amp; &quot; M+&quot;, IF(FLOOR((Closed_Date__c - CreatedDate)/7) &gt;= 1, TEXT(FLOOR((Closed_Date__c - CreatedDate)/7))&amp; &quot; W+&quot;, TEXT(FLOOR(Closed_Date__c - CreatedDate))&amp; &quot; D&quot;))), IF(FLOOR((NOW() - CreatedDate)/365) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/365))&amp; &quot; Y+&quot;, IF(FLOOR((NOW() - CreatedDate)/30) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/30))&amp; &quot; M+&quot;, IF(FLOOR((NOW() - CreatedDate)/7) &gt;= 1, TEXT(FLOOR((NOW() - CreatedDate)/7))&amp; &quot; W+&quot;, TEXT(FLOOR(NOW() - CreatedDate))&amp; &quot; D&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defect_Detected__c</fullName>
        <description>It shows the Phase of the project in which the defect is identified</description>
        <label>Defect Detected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirement Stage</fullName>
                </value>
                <value>
                    <fullName>Design Stage</fullName>
                </value>
                <value>
                    <fullName>Design Review</fullName>
                </value>
                <value>
                    <fullName>Build Stage</fullName>
                </value>
                <value>
                    <fullName>Build Review</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Post Go-Live</fullName>
                </value>
                <value>
                    <fullName>Code Review</fullName>
                </value>
                <value>
                    <fullName>Test Script Review</fullName>
                </value>
                <value>
                    <fullName>Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
                <value>
                    <fullName>System Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Lifecycle__c</fullName>
        <description>this field is related to the Defect Path - not visible on any page layout</description>
        <label>Defect Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open - Action Required</fullName>
                </value>
                <value>
                    <fullName>Test in Progress</fullName>
                </value>
                <value>
                    <fullName>Fixed - Ready for retest</fullName>
                    <label>Fixed - Ready for Retest</label>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <description>This field specifies type of the defect</description>
        <inlineHelpText>If a Defect gets Rejected use the Defect Type &apos;Not a Defect&apos; or &apos;Enhancement&apos;</inlineHelpText>
        <label>Defect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                    <default>true</default>
                    <label>Defect</label>
                </value>
                <value>
                    <fullName>Not a Defect</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <description>Detailed Description of the defect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Developer to whom the defect has been assigned</description>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Environment where the defect has been identified</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACNDEV</fullName>
                </value>
                <value>
                    <fullName>ACNQA</fullName>
                </value>
                <value>
                    <fullName>ALUPRODFIX</fullName>
                </value>
                <value>
                    <fullName>ALUSCRMDEV</fullName>
                </value>
                <value>
                    <fullName>ALUUAT</fullName>
                </value>
                <value>
                    <fullName>C79</fullName>
                </value>
                <value>
                    <fullName>CCPQ1</fullName>
                </value>
                <value>
                    <fullName>CCPQ2</fullName>
                </value>
                <value>
                    <fullName>CCRM</fullName>
                </value>
                <value>
                    <fullName>CNGOEP</fullName>
                </value>
                <value>
                    <fullName>DCRM</fullName>
                </value>
                <value>
                    <fullName>DCRM1</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>DPRM</fullName>
                </value>
                <value>
                    <fullName>DR1PRM</fullName>
                </value>
                <value>
                    <fullName>I79</fullName>
                </value>
                <value>
                    <fullName>ICPQ</fullName>
                </value>
                <value>
                    <fullName>ICRM</fullName>
                </value>
                <value>
                    <fullName>INGOEP</fullName>
                </value>
                <value>
                    <fullName>IPRM</fullName>
                </value>
                <value>
                    <fullName>IR1PRM</fullName>
                </value>
                <value>
                    <fullName>MAY21</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Q79</fullName>
                </value>
                <value>
                    <fullName>QCRM</fullName>
                </value>
                <value>
                    <fullName>QCRM3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identifying_Team__c</fullName>
        <label>Identifying Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Enablement</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Functional Team</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>Performance Engineering</fullName>
                </value>
                <value>
                    <fullName>Process Team</fullName>
                </value>
                <value>
                    <fullName>Security Team</fullName>
                </value>
                <value>
                    <fullName>Tech Arch</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Third Party Provider</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Test Team</fullName>
                </value>
                <value>
                    <fullName>AToS</fullName>
                    <isActive>false</isActive>
                    <label>AToS</label>
                </value>
                <value>
                    <fullName>HPE</fullName>
                    <isActive>false</isActive>
                    <label>HPE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Market Type Values for Stage Found as E2E UAT</description>
        <inlineHelpText>Market Type Values for Stage Found as E2E UAT</inlineHelpText>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage_Found__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>MEA</fullName>
                </value>
                <value>
                    <fullName>LAT</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_days_in_Current_Status__c</fullName>
        <formula>FLOOR(NOW()-Status_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No.of days in Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owning_Group__c</fullName>
        <label>Owning Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Admin Team</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>AToS</fullName>
                </value>
                <value>
                    <fullName>CoE</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>HPE</fullName>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Select the priority based on business need.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low Priority</fullName>
                </value>
                <value>
                    <fullName>Normal Queue</fullName>
                </value>
                <value>
                    <fullName>High Attention</fullName>
                </value>
                <value>
                    <fullName>Resolve Immediately</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Primary Nokia Business team representative</inlineHelpText>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reject_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Nonstrategic Direction</fullName>
                </value>
                <value>
                    <fullName>Other Projects</fullName>
                </value>
                <value>
                    <fullName>Testing Error</fullName>
                </value>
                <value>
                    <fullName>Unable to Replicate</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Working as Designed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Request related to the defect</description>
        <label>Requirement</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related To</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who reported the defect</description>
        <inlineHelpText>Please select a Reported by if you are not reporter of this defect. If you leave this field blank, you will be automatically the Reported by user.</inlineHelpText>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement_Feature__c</fullName>
        <formula>Related_Request__r.User_Story__r.Capability__r.Name</formula>
        <label>Requirement Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Release__c</fullName>
        <formula>Related_Request__r.Feature_Release__c</formula>
        <label>Requirement Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retest_Status__c</fullName>
        <description>Status of retest of the defect</description>
        <label>Retest Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who retested the defect</description>
        <label>Retested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retesting_Comments__c</fullName>
        <description>Comments on retesting of the defect</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Retesting Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RollUpAssigned__c</fullName>
        <label>Total number of days in Assigned</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Assigned</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpDeferred__c</fullName>
        <label>Total number of days in Deferred</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Deferred</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpFailedRt__c</fullName>
        <label>Total number of days in Failed Retest</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Failed Retest</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpFixed__c</fullName>
        <label>Total number of days in Fixed</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Fixed</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpMonitor__c</fullName>
        <label>Total number of days in Monitor</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Monitor</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpNew__c</fullName>
        <label>Total number of days in New</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpPROD__c</fullName>
        <label>Total number of days in Validate PROD</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Validate PROD</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RollUpReOpen__c</fullName>
        <label>Total number of days in Reopened</label>
        <summarizedField>Defect_Age__c.No_of_Days__c</summarizedField>
        <summaryFilterItems>
            <field>Defect_Age__c.Status__c</field>
            <operation>equals</operation>
            <value>Re-opened</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect_Age__c.Defect__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>